objects/Contract_Committee_Submittal__c.object
<CustomObject>
    <fields>
        <fullName>AE_Design_Notes_and_Scope_Concerns__c</fullName>
        <description>Updated by Workflow rule to display AE Design Notes and Scope Concerns from related Pricing Request</description>
        <label>AE Design Notes and Scope Concerns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTA_Survey__c</fullName>
        <description>Link to final ALTA survey - including System Overlay, Lease Area, Layout, and Intx Overlay</description>
        <inlineHelpText>Link to final ALTA survey - including System Overlay, Lease Area, Layout, and Intx Overlay</inlineHelpText>
        <label>ALTA Survey</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Account_Branch_del__c</fullName>
        <description>Pulls the branch from the related account. Used in email alert logic</description>
        <formula>TEXT(Opportunity__r.Account.Branch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls the branch from the related account. Used in email alert logic</inlineHelpText>
        <label>Account Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>pulls account name from related opportunity.</description>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls account name from related opportunity.</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Exec_Email__c</fullName>
        <label>Applications Engineer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Pricing_Notes_or_Explanation__c</fullName>
        <inlineHelpText>Enter any additional notes or project information to relay to the Contracts Committee</inlineHelpText>
        <label>Additional Notes and Project Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_In_EPC_Cost_per_DC_Watt__c</fullName>
        <formula>Finance_Request__r.EPC_Price_Watt__c</formula>
        <inlineHelpText>pulls value from EPC Price/Watt related finance request</inlineHelpText>
        <label>Approved EPC Price from Finance Request</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value_O_M__c</fullName>
        <description>pulls amount from related Opportunity</description>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls amount from related Opportunity</inlineHelpText>
        <label>Annual Contract Value (O&amp;M)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_sign_of_wetlands__c</fullName>
        <inlineHelpText>This comes from the Pricing Tool Approval field with the same name.</inlineHelpText>
        <label>Any sign of wetlands?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anyone_walked_the_site__c</fullName>
        <inlineHelpText>This comes from the Pricing Tool Approval field with the same name.</inlineHelpText>
        <label>Anyone walked the site?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalProcessComments__c</fullName>
        <label>Approval Process Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Amount_to_Spend__c</fullName>
        <inlineHelpText>Contracts Committee Approved Amount to Spend- filled out by the CC upon approval</inlineHelpText>
        <label>Approved Amount to Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Finance_Req_Link_Dev_Eng_Set__c</fullName>
        <inlineHelpText>link to approved Finance Request based on Dev Eng Set</inlineHelpText>
        <label>Approved Finance Req Link (Dev Eng Set)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Approved_Pricing_Req_Link_Dev_Eng_Set__c</fullName>
        <inlineHelpText>Link to approved Pricing Request based on Dev Eng Set</inlineHelpText>
        <label>Approved Pricing Req Link (Dev Eng Set)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Approved_by_Legal__c</fullName>
        <inlineHelpText>Have the redlines and contract been approved by Legal?</inlineHelpText>
        <label>Approved by Legal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_Install_Date_Mob_Date__c</fullName>
        <formula>Opportunity__r.Approximate_Install_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Approximate Install Date from Opportunity- the estimated mobilization date</inlineHelpText>
        <label>Approximate Install Date (Mob Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Are_the_Product_Delivery_Dates_confirmed__c</fullName>
        <inlineHelpText>Are the racking, module, and inverter delivery dates correct as far as you know? Check the dates on the project to confirm.</inlineHelpText>
        <label>Product Delivery Dates correct?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_the_Products_accurate__c</fullName>
        <label>Are the Products accurate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_there_union_labor_requirements__c</fullName>
        <inlineHelpText>This comes from the Pricing Tool Approval field with the same name.</inlineHelpText>
        <label>Are there union labor requirements?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Box_Folder_with_all_Site_Disco_Items__c</fullName>
        <inlineHelpText>Link to box folder containing, wetlands delineation, GIS survey info, skeletal survey, title report, interconnection application, NHESP letter, SHPO letter (NY only), phase I ESA, and copy of solar bylaw if applicable.</inlineHelpText>
        <label>Box Folder with all Site Disco Items</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Buyer_for_Assets__c</fullName>
        <label>Buyer for Assets?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCDecision__c</fullName>
        <inlineHelpText>Link to final order of conditions issued by CC/Wetlands (if applicable)</inlineHelpText>
        <label>ConsCom/Wetlands Approval</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CCStatusCheck__c</fullName>
        <formula>IF( AND(Pricing_Tool_Approval_Status__c &lt;&gt;&quot;Preliminary Approval&quot;, Pricing_Tool_Approval_Status__c &lt;&gt;&quot;Approved&quot;,Pricing_Tool_Approval_Status__c &lt;&gt;&quot;Final Approval&quot;, NOT(ISBLANK(Pricing_Tool_Approval_Status__c)) ), IMAGE(&quot;servlet/servlet.FileDownload?file=015800000016DpB&quot;, &quot;WHITE&quot;),
IF(AND(PSD_Revision_Status__c &lt;&gt; &quot;Working Design&quot;, NOT(ISBLANK( PSD_Revision_Status__c ))),  IMAGE(&quot;servlet/servlet.FileDownload?file=015800000016DpA&quot;, &quot;WHITE&quot;),
IF(AND(Finance_Request_Status__c &lt;&gt;&quot;Approved&quot;, NOT(ISBLANK(Finance_Request_Status__c))), IMAGE(&quot;servlet/servlet.FileDownload?file=015800000016Dp8&quot;, &quot;WHITE&quot;), 
IF(AND(Production_Modeling_Status__c &lt;&gt; &quot;Approved&quot;, NOT(ISBLANK( Production_Modeling_Status__c ))), IMAGE(&quot;servlet/servlet.FileDownload?file=015800000016DpC&quot;, &quot;WHITE&quot;),
  &quot;Yes&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Verifies all associated objects are approved prior to submitting to the CC</inlineHelpText>
        <label>CC Status Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Request__c</fullName>
        <inlineHelpText>Enter what you are asking for from the CC and explanation of importance of timing</inlineHelpText>
        <label>What are you asking for and when?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Cost__c</fullName>
        <inlineHelpText>From Opportunity:
(S+S Direct COGS $/w (last approved Pricing Req value) *system size) - Non-ix dev COGS - Intx Upgrade Cost</inlineHelpText>
        <label>Construction Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Cost_w__c</fullName>
        <inlineHelpText>Construction Cost / System Size</inlineHelpText>
        <label>Construction Cost ($/w)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracts_Committee_Notes__c</fullName>
        <inlineHelpText>Notes from the Contracts Committee- filled out during CC Review meeting</inlineHelpText>
        <label>Contracts Committee Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_requirements_beyond_code__c</fullName>
        <inlineHelpText>This comes from the Pricing Tool Approval field with the same name.</inlineHelpText>
        <label>Customer requirements beyond code?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DIG_Notes__c</fullName>
        <label>DIG Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Damages__c</fullName>
        <inlineHelpText>What is the rate per kWh that we will have to pay for any shortfall?</inlineHelpText>
        <label>Damages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Kickoff_Completed__c</fullName>
        <inlineHelpText>auto date stamps the date the kickoff is complete</inlineHelpText>
        <label>Date Kickoff Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Meeting_Accepted__c</fullName>
        <inlineHelpText>auto-date stamps date project kickoff was approved</inlineHelpText>
        <label>Date Meeting Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Meeting_Held__c</fullName>
        <inlineHelpText>auto-date stamps when status of project kickoff is updated to Meeting Held</inlineHelpText>
        <label>Date Meeting Held</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PB3_Approval_Form_Created2__c</fullName>
        <description>uses WF field update</description>
        <label>Date PB3 Approval Form Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PB3_Approval_Form_Created__c</fullName>
        <description>uses WF field update</description>
        <label>Date PB3 Approval Form Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_PB3_Complete__c</fullName>
        <description>uses Java button to record timestamp</description>
        <label>TEXT Date PB3 Complete</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_PB3_Team_Notified__c</fullName>
        <description>uses java button to record time stamp</description>
        <label>Date PB3 Team Notified</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_PB7_Final_Approved__c</fullName>
        <inlineHelpText>Auto filled in by approval process</inlineHelpText>
        <label>Approval Out of 7C</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PB7_Submitted_for_Approval__c</fullName>
        <inlineHelpText>Pulls from 7c Submittal date from Project +1 week</inlineHelpText>
        <label>Accepted into 7C</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Project_Hypothesis_Approved__c</fullName>
        <label>Date Project Hypothesis Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Approval__c</fullName>
        <inlineHelpText>auto-date stamps whenever project kickoff request is submitted for approval</inlineHelpText>
        <label>Date Submitted for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_into_7C__c</fullName>
        <description>autofills with date record is submitted as part of approval process</description>
        <inlineHelpText>autofills with date record is submitted</inlineHelpText>
        <label>Submitted into 7C</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <formula>Project__r.Deadline_Dates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from the Project Schedule on the related Project</inlineHelpText>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadlines_LDs_and_Schedule_Expectation__c</fullName>
        <inlineHelpText>Identify any Liquidated Damages, Contract Deadlines, Utility Payment Deadlines and Other Schedule Expectations.</inlineHelpText>
        <label>Deadlines, LDs, and Schedule Expectation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Standards__c</fullName>
        <inlineHelpText>Verbal/written requirements of the Host</inlineHelpText>
        <label>Design Standards</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_Production_Guarantees__c</fullName>
        <inlineHelpText>Term, Guarantee %, True-Up Periods, kWh rate damages
Required if Production Guarantee = Yes
If no Prod Guarantee, enter N/A</inlineHelpText>
        <label>Details of Production Guarantee</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Eng_Set__c</fullName>
        <inlineHelpText>Link to final Dev Eng set inclusive of initial site discovery items</inlineHelpText>
        <label>Dev Eng Set</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Development_Budget_at_SubmittalF__c</fullName>
        <formula>Development_Budget_at_Submittal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Development Budget already approved at the time of the submittal
Pulls from the Approved Development Budget field on the Project</inlineHelpText>
        <label>Development Budget at Submittal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Budget_at_Submittal__c</fullName>
        <inlineHelpText>Approved Development Budget from the associated Project at the time this was submitted for approval.</inlineHelpText>
        <label>Development Budget at Submittal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Cost__c</fullName>
        <inlineHelpText>From Opportunity:
The greater value of either the Cost Assumption based on Vertical or the Actual Cost</inlineHelpText>
        <label>Development Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_Cost_w__c</fullName>
        <inlineHelpText>Development Cost / System Size</inlineHelpText>
        <label>Development Cost ($/w)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Development_SDE_Email__c</fullName>
        <description>works with WF</description>
        <inlineHelpText>Brings over the email from the related Project</inlineHelpText>
        <label>Development SDE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deviations_from_std_Borrego_contrac__c</fullName>
        <description>notes field which can List key deviations from Borrego O&amp;M Contract or Output Guarantee Standard Terms</description>
        <inlineHelpText>List key deviations from Borrego O&amp;M Contract or Output Guarantee Standard Terms</inlineHelpText>
        <label>Deviation from std Borrego contract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_EE_Review_and_Approve_Utility_Docs__c</fullName>
        <label>Did EE Review and Approve Utility Docs?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_diligence_done_on_product_to_date__c</fullName>
        <inlineHelpText>Initial outlook based on vendor financial position and track record in market. This question does not apply to products from approved vendors</inlineHelpText>
        <label>Due diligence done on product to date</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPC_Contract_Price_from_Pricing_Tool__c</fullName>
        <formula>Pricing_Tool_Approval__r.Final_EPC_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EPC Contract Price listed on the associated approved Pricing Tool</inlineHelpText>
        <label>EPC Contract Price from Pricing Tool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESS_Size__c</fullName>
        <inlineHelpText>From Opportunity:
Storage Power (kW)</inlineHelpText>
        <label>ESS Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESS__c</fullName>
        <inlineHelpText>From Opportunity:
Is the current ESS design AC-Coupled or DC-Coupled?</inlineHelpText>
        <label>ESS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC Coupled</fullName>
                </value>
                <value>
                    <fullName>DC Coupled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimate_for_Additional_LT_days__c</fullName>
        <inlineHelpText>Estimate for Additional Lead Time
Include time for all departments. Use a min estimate of 3 weeks to allow for due diligence. Seek input on Eng LT from Dir of Eng.</inlineHelpText>
        <label>Estimate for Additional LT (days)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate_for_Additional_PT_hours__c</fullName>
        <inlineHelpText>Estimate for Additional Process Time
Include time for all departments. Use a min estimate of 40 hours for all non-eng time. Add in Eng PT. Seek input on Eng PT from Dir of Eng</inlineHelpText>
        <label>Estimate for Additional PT (hours)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_COD_Date__c</fullName>
        <formula>Pricing_Tool_Approval__r.Estimated_COD_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated Construction Operation Date- From related approved Pricing Tool Approval</inlineHelpText>
        <label>Estimated COD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_NTP_Date__c</fullName>
        <formula>Pricing_Tool_Approval__r.Estimated_NTP_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated NTP Date from the associated Pricing Tool Approval</inlineHelpText>
        <label>Estimated NTP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Offtaker_Price__c</fullName>
        <inlineHelpText>What is the estimated price the offtaker is paying?</inlineHelpText>
        <label>Estimated Offtaker Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executed_Lease__c</fullName>
        <inlineHelpText>Paste box link to fully executed lease. Click &quot;PB3 Complete&quot; button once this item is uploaded and all other fields are complete and the team will receive notice that PB3 is complete</inlineHelpText>
        <label>Executed Lease</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Execution_Version_of_Lease__c</fullName>
        <description>The box link to the Microsoft Word version of the final copy of the lease that has been circulated for execution.</description>
        <inlineHelpText>Paste the box link to the Microsoft Word version of the final copy of the lease that has been circulated for execution.</inlineHelpText>
        <label>Execution Version of Lease</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expected_Closing_Date__c</fullName>
        <description>MIPA Signed Date from Opportunity updated by flow</description>
        <inlineHelpText>MIPA Signed Date from Opportunity</inlineHelpText>
        <label>Expected Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Contribution_Margin__c</fullName>
        <inlineHelpText>Expected Contribution Margin ($) at the time of request</inlineHelpText>
        <label>Expected Contribution Margin ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Direct_Margin__c</fullName>
        <label>Expected Direct Margin ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Direct_Margin_percent__c</fullName>
        <label>Expected Direct Margin (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Margin__c</fullName>
        <inlineHelpText>Expected Gross Margin ($) at the time of the request</inlineHelpText>
        <label>Expected Gross Margin ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Net_Margin__c</fullName>
        <inlineHelpText>Expected Net Margin ($) at the time of the request</inlineHelpText>
        <label>Expected Net Margin ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Explanation_of_Upcoming_Spending__c</fullName>
        <inlineHelpText>This will be used to put in anything about what spending the PM will likely do, or about future CC requests that will come to spend above $400k.</inlineHelpText>
        <label>Explanation of Upcoming Spending</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fin_Req_Production_Formula__c</fullName>
        <formula>&quot;Fin Req=&quot; &amp; TEXT( Finance_Request__r.Year_1_Production__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fin Req Production Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Negotiated_Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>confirms that the required attachment has been included in Notes &amp; Attachments area</description>
        <inlineHelpText>This is required to submit any request.  Checking this box, confirms that the final negotiated contact has been attached in the notes &amp; attachments area of this request.  This section is visible upon saving the record.</inlineHelpText>
        <label>Final Negotiated Contract Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Proposal_Submitted_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>confirms that the required attachment has been included in Notes &amp; Attachments area</description>
        <inlineHelpText>This is required if over $100K in order to go to the contract committee for approval.  Checking tihs box, confirms that the final proposal document has been attched in the Notes &amp; Attachments area.  This section is visible upon saving the record.</inlineHelpText>
        <label>Final Proposal Submitted Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Request_Status__c</fullName>
        <formula>TEXT(Finance_Request__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the associated Finance Request</inlineHelpText>
        <label>Finance Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An associated Finance Request is Required if the Project is PPA
NOT REQUIRED FOR CASH DEALS</inlineHelpText>
        <label>Finance Request</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. The Opportunity of the Fiance Request must match the Opportunity on the PB-9.</errorMessage>
            <filterItems>
                <field>Finance_Request__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Finance_Request__c</referenceTo>
        <relationshipName>Contract_Committee_Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GIS_LIDAR_survey__c</fullName>
        <description>Box link for folder containing GIS LIDAR information</description>
        <inlineHelpText>Paste box link for folder containing GIS LIDAR information</inlineHelpText>
        <label>GIS LIDAR survey</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Guarantee_Level__c</fullName>
        <inlineHelpText>What percentage of modeled production are we guaranteeing?</inlineHelpText>
        <label>Guarantee Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Borrego_sold_to_buyer_before__c</fullName>
        <label>Has Borrego sold to buyer before?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_DMOT_been_done_by_Dev_Eng__c</fullName>
        <label>Has DMOT been done by Dev Eng?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_much_money_is_it_going_to_save_us__c</fullName>
        <inlineHelpText>•	$/watt and Total $ saved 
•	Estimated impact on system price, compared to current products 
•	include product cost and assessment of installation and balance of system (BOS) cost - account for all-in hard costs for making the change</inlineHelpText>
        <label>How much money is it going to save us?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IRR_target_for_this_market__c</fullName>
        <label>IRR target for this market?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_no_please_explain__c</fullName>
        <description>conditional field, required when Buyer for Assets is No on Development No EPC record type</description>
        <inlineHelpText>If there is not a buyer for the development assets, ID and explain status of potential buyers</inlineHelpText>
        <label>If no, please explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_please_elaborate__c</fullName>
        <description>used in conjunction with New Region w/licensing/tax implications field, if response is YES more information is required.</description>
        <inlineHelpText>f response is YES to new region/tax implications field, more information is required.</inlineHelpText>
        <label>If yes, please elaborate?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_what_are_the_key_terms__c</fullName>
        <description>used in conjunction with field Performance/Availability included field, if the answer is YES more specifics are required.</description>
        <inlineHelpText>If there is a guarantee included list key terms, such as:  Term, Guarantee %, True-Up Periods,</inlineHelpText>
        <label>If Guarantee, what are key terms?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Budget_for_Compliance__c</fullName>
        <inlineHelpText>How much, if anything, will it cost Borrego to comply with the Insurance Requirements?</inlineHelpText>
        <label>Insurance Budget for Compliance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Signoff_Email_Link__c</fullName>
        <inlineHelpText>Enter the link of the Box folder where the insurance email is stored.</inlineHelpText>
        <label>Insurance Signoff Email Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Insurance_Signoff_Status__c</fullName>
        <inlineHelpText>Has the agent reviewed and approved the insurance requirements?</inlineHelpText>
        <label>Insurance Requirements Approved by Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interconnection_Cost__c</fullName>
        <inlineHelpText>From Opportunity:
Pulls the value of the Intx Cost assumption based on vertical OR the actual upgrade costs(if they exist)</inlineHelpText>
        <label>Interconnection Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interconnection_Cost_w__c</fullName>
        <inlineHelpText>Interconnection Cost / System Size</inlineHelpText>
        <label>Interconnection Cost ($/w)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interconnection_Upgrade_Cost__c</fullName>
        <inlineHelpText>Fill in if different from vertical cost assumption</inlineHelpText>
        <label>Interconnection Upgrade Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Civil_PE_Email__c</fullName>
        <description>works with PB. Used in email alerts</description>
        <inlineHelpText>Pulled from the Project Site automatically when a value is filled in.</inlineHelpText>
        <label>Internal Civil PE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Intx_Upgrade_Cost_Paid__c</fullName>
        <description>Interconnection Upgrade Cost from Opportunity - Updated from flow</description>
        <inlineHelpText>Interconnection Upgrade Cost from Opportunity</inlineHelpText>
        <label>Intx Upgrade Cost Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>